Fixed layout issues

--- a/less/flipcard-audio.less
+++ b/less/flipcard-audio.less
@@ -46,7 +46,6 @@
     z-index: 110;
     width: 99%;
     height: 100%;
-    border: none;
     background: @primary-color;
     cursor: pointer;
 
@@ -78,6 +77,10 @@
 
     &.flipcard-audio-item-back {
       padding: @item-padding;
+
+      border: 3px solid @primary-color;
+
+      width: 100%;
 
       box-sizing: border-box;
       -webkit-box-sizing: border-box;
@@ -124,7 +127,6 @@
   @media all and (max-width: @device-width-medium) {
     .flipcard-audio-item {
       width: 100%;
-      height: 200px;
       margin-left: 0%;
       margin-right: 0%;
     }
